hphp/hack/test/typecheck/pipe_assign.php.exp
ERROR: File "pipe_assign.php", line 5, characters 3-4:
Pipe variables must occur only in the RHS of pipe expressions (Parsing[1002])
ERROR: File "pipe_assign.php", line 5, characters 3-4:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
ERROR: File "pipe_assign.php", line 6, characters 3-4:
Pipe variables must occur only in the RHS of pipe expressions (Parsing[1002])
ERROR: File "pipe_assign.php", line 6, characters 3-4:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
ERROR: File "pipe_assign.php", line 5, characters 3-4:
Variable `$$` is undefined, or not always defined. (Naming[2050])
ERROR: File "pipe_assign.php", line 6, characters 3-4:
Variable `$$` is undefined, or not always defined. (Naming[2050])
ERROR: File "pipe_assign.php", line 5, characters 3-8:
Invalid assignment (Typing[4110])
  File "", line 0, characters 0-0:
  Expected `nothing`
  File "pipe_assign.php", line 5, characters 8-8:
  But got `int`
ERROR: File "pipe_assign.php", line 6, characters 3-8:
Invalid assignment (Typing[4110])
  File "", line 0, characters 0-0:
  Expected `nothing`
  File "pipe_assign.php", line 6, characters 8-8:
  But got `int`
